@@ -119,11 +119,17 @@ import org.springframework.security.oauth2.core.user.OAuth2User;
  */
 public class Helper {
 
+  private static final String UTF_8 = "UTF-8";
+
   private static final Pattern validQNamePattern =
       Pattern.compile("([a-zA-Z_%][a-zA-Z0-9_\\-%]*:)?[a-zA-Z_%][a-zA-Z0-9_\\-%]*");
 
-
   public static List<String> getCorpusPath(final SCorpusGraph corpusGraph, final SDocument doc) {
+    return getCorpusPath(corpusGraph, doc, true);
+  }
+
+  public static List<String> getCorpusPath(final SCorpusGraph corpusGraph, final SDocument doc,
+      boolean decodeElements) {
     final List<String> result = new LinkedList<String>();
 
     result.add(doc.getName());
@@ -146,16 +152,43 @@ public class Helper {
           @Override
           public void nodeReached(final GRAPH_TRAVERSE_TYPE traversalType, final String traversalId,
               final SNode currNode, final SRelation edge, final SNode fromNode, final long order) {
-            result.add(currNode.getName());
+            if (decodeElements) {
+              try {
+                result.add(URLDecoder.decode(currNode.getName(), UTF_8));
+              } catch (final UnsupportedEncodingException ex) {
+                log.error(null, ex);
+                // fallback
+                result.add(currNode.getName());
+              }
+            } else {
+              result.add(currNode.getName());
+            }
           }
         });
     return result;
   }
 
-  public static List<String> getCorpusPath(String uri) {
+  /**
+   * Remove a possible legacy id prefix.
+   * 
+   * @param uri The original node ID
+   * 
+   * @return The node ID without a "salt:/" prefix
+   */
+  public static String removeSaltPrefix(String uri) {
     if (uri.startsWith("salt:/")) {
       uri = uri.substring("salt:/".length());
     }
+    return uri;
+
+  }
+
+  public static List<String> getCorpusPath(String uri) {
+    return getCorpusPath(uri, true);
+  }
+
+  public static List<String> getCorpusPath(String uri, boolean decodeElements) {
+    uri = Helper.removeSaltPrefix(uri);
     final String rawPath = StringUtils.strip(uri, "/ \t");
 
     // split on raw path (so "/" in corpus names are still encoded)
@@ -172,7 +205,11 @@ public class Helper {
             path[i] = path[i].substring(0, fragmentStart);
           }
         }
-        result.add(URLDecoder.decode(path[i], "UTF-8"));
+        if (decodeElements) {
+          result.add(URLDecoder.decode(path[i], UTF_8));
+        } else {
+          result.add(path[i]);
+        }
       } catch (final UnsupportedEncodingException ex) {
         log.error(null, ex);
         // fallback
@@ -687,7 +724,7 @@ public class Helper {
   }
 
   public static Optional<OAuth2User> getUser(UI ui) {
-    if(ui instanceof AnnisUI) {
+    if (ui instanceof AnnisUI) {
       return Helper.getUser(((AnnisUI) ui).getSecurityContext());
     } else {
       return Helper.getUser(SecurityContextHolder.getContext());
@@ -722,8 +759,8 @@ public class Helper {
     Object rolesRaw = user.getAttributes().get(SecurityConfiguration.ROLES_CLAIM);
     if (rolesRaw instanceof List<?>) {
       List<?> roles = (List<?>) rolesRaw;
-      for(Object o : roles) {
-        if(o instanceof String) {
+      for (Object o : roles) {
+        if (o instanceof String) {
           result.add((String) o);
         }
       }
@@ -885,7 +922,8 @@ public class Helper {
         // 1th condition: hebrew extended and basic, arabic basic and extendend
         // 2nd condition: alphabetic presentations forms (hebrew) to arabic presentation forms A
         // 3rd condition: arabic presentation forms B
-        if((cc >= 1425 && cc <= 1785) || (cc >= 64286 && cc <= 65019) || (cc >= 65136 && cc <= 65276)) {
+        if ((cc >= 1425 && cc <= 1785) || (cc >= 64286 && cc <= 65019)
+            || (cc >= 65136 && cc <= 65276)) {
           return true;
         }
       }
@@ -1042,9 +1080,9 @@ public class Helper {
           try {
             // every name that starts with "_" is base64 encoded
             if (name.startsWith("_")) {
-              value = new String(Base64.decodeBase64(parts[1]), "UTF-8");
+              value = new String(Base64.decodeBase64(parts[1]), UTF_8);
             } else {
-              value = URLDecoder.decode(parts[1], "UTF-8");
+              value = URLDecoder.decode(parts[1], UTF_8);
             }
           } catch (final UnsupportedEncodingException ex) {
             log.error(ex.getMessage(), ex);
